--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx hardhat run scripts/run.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +15,10 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.6",
-    "hardhat": "^2.9.5"
+    "ethers": "^5.6.8",
+    "hardhat": "^2.9.7"
   },
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "glob": "^7.2.0"
+    "dotenv": "^16.0.1"
   }
 }
